@@ -70,10 +70,16 @@ lsd::lsd(io_service& ios, address const& listen_interface
 	: m_callback(cb)
 	, m_socket(udp::endpoint(address_v4::from_string("239.192.152.143", ec), 6771)
 		, boost::bind(&lsd::on_announce, self(), _1, _2, _3))
+#if TORRENT_USE_IPV6
+	, m_socket6(udp::endpoint(address_v6::from_string("ff15::efc0:988f", ec), 6771)
+		, boost::bind(&lsd::on_announce, self(), _1, _2, _3))
+#endif
 	, m_broadcast_timer(ios)
-	, m_retry_count(1)
 	, m_cookie(random())
 	, m_disabled(false)
+#if TORRENT_USE_IPV6
+	, m_disabled6(false)
+#endif
 {
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
 	m_log = fopen("lsd.log", "w+");
@@ -94,6 +100,17 @@ lsd::lsd(io_service& ios, address const& listen_interface
 			, ec.value(), ec.message().c_str());
 	}
 #endif
+
+#if TORRENT_USE_IPV6
+	m_socket6.open(ios, ec);
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+	if (ec)
+	{
+		if (m_log) fprintf(m_log, "FAILED TO OPEN SOCKET6: (%d) %s\n"
+			, ec.value(), ec.message().c_str());
+	}
+#endif
+#endif
 }
 
 lsd::~lsd()
@@ -103,70 +120,100 @@ lsd::~lsd()
 #endif
 }
 
+int render_lsd_packet(char* dst, int len, int listen_port
+	, char const* info_hash_hex, int m_cookie, char const* host)
+{
+	return snprintf(dst, len,
+		"BT-SEARCH * HTTP/1.1\r\n"
+		"Host: %s:6771\r\n"
+		"Port: %d\r\n"
+		"Infohash: %s\r\n"
+		"cookie: %x\r\n"
+		"\r\n\r\n", host, listen_port, info_hash_hex, m_cookie);
+}
+
 void lsd::announce(sha1_hash const& ih, int listen_port, bool broadcast)
 {
+	announce_impl(ih, listen_port, broadcast, 0);
+}
+
+void lsd::announce_impl(sha1_hash const& ih, int listen_port, bool broadcast
+	, int retry_count)
+{
+#if TORRENT_USE_IPV6
+	if (m_disabled && m_disabled6) return;
+#else
 	if (m_disabled) return;
+#endif
 
 	char ih_hex[41];
 	to_hex((char const*)&ih[0], 20, ih_hex);
 	char msg[200];
-	int msg_len = snprintf(msg, sizeof(msg),
-		"BT-SEARCH * HTTP/1.1\r\n"
-		"Host: 239.192.152.143:6771\r\n"
-		"Port: %d\r\n"
-		"Infohash: %s\r\n"
-		"cookie: %x\r\n"
-		"\r\n\r\n", listen_port, ih_hex, m_cookie);
 
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-	{
-		if (m_log) fprintf(m_log, "%s ==> announce: ih: %s port: %u\n"
-			, time_now_string(), ih_hex, listen_port);
-	}
+	if (m_log) fprintf(m_log, "%s ==> announce: ih: %s port: %u\n"
+		, time_now_string(), ih_hex, listen_port);
 #endif
 
-	m_retry_count = 1;
 	error_code ec;
-	m_socket.send(msg, msg_len, ec, broadcast ? broadcast_socket::broadcast : 0);
-	if (ec)
+	if (!m_disabled)
 	{
-		m_disabled = true;
-#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+		int msg_len = render_lsd_packet(msg, sizeof(msg), listen_port, ih_hex
+			, m_cookie, "239.192.152.143");
+		m_socket.send(msg, msg_len, ec, broadcast ? broadcast_socket::broadcast : 0);
+		if (ec)
 		{
+			m_disabled = true;
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
 			if (m_log) fprintf(m_log, "%s failed to send message: (%d) %s"
 				, time_now_string(), ec.value(), ec.message().c_str());
+#endif
 		}
+	}
+
+#if TORRENT_USE_IPV6
+	if (!m_disabled6)
+	{
+		int msg_len = render_lsd_packet(msg, sizeof(msg), listen_port, ih_hex
+			, m_cookie, "[ff15::efc0:988f]");
+		m_socket6.send(msg, msg_len, ec, broadcast ? broadcast_socket::broadcast : 0);
+		if (ec)
+		{
+			m_disabled6 = true;
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+			if (m_log) fprintf(m_log, "%s failed to send message6: (%d) %s"
+				, time_now_string(), ec.value(), ec.message().c_str());
+#endif
+		}
+	}
 #endif
 
-		return;
-	}
+	++retry_count;
+	if (retry_count >= 3) return;
+
+#if TORRENT_USE_IPV6
+	if (m_disabled && m_disabled6) return;
+#else
+	if (m_disabled) return;
+#endif
 
 #if defined TORRENT_ASIO_DEBUGGING
 	add_outstanding_async("lsd::resend_announce");
 #endif
-	m_broadcast_timer.expires_from_now(seconds(2 * m_retry_count), ec);
+	m_broadcast_timer.expires_from_now(seconds(2 * retry_count), ec);
 	m_broadcast_timer.async_wait(boost::bind(&lsd::resend_announce, self(), _1
-		, std::string(msg)));
+		, ih, listen_port, retry_count));
 }
 
-void lsd::resend_announce(error_code const& e, std::string msg)
+void lsd::resend_announce(error_code const& e, sha1_hash const& info_hash
+	, int listen_port, int retry_count)
 {
 #if defined TORRENT_ASIO_DEBUGGING
 	complete_async("lsd::resend_announce");
 #endif
 	if (e) return;
 
-	error_code ec;
-	m_socket.send(msg.c_str(), int(msg.size()), ec);
-
-	++m_retry_count;
-	if (m_retry_count >= 3) return;
-
-#if defined TORRENT_ASIO_DEBUGGING
-	add_outstanding_async("lsd::resend_announce");
-#endif
-	m_broadcast_timer.expires_from_now(seconds(2 * m_retry_count), ec);
-	m_broadcast_timer.async_wait(boost::bind(&lsd::resend_announce, self(), _1, msg));
+	announce_impl(info_hash, listen_port, false, retry_count);
 }
 
 void lsd::on_announce(udp::endpoint const& from, char* buffer
@@ -264,9 +311,15 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 void lsd::close()
 {
 	m_socket.close();
+#if TORRENT_USE_IPV6
+	m_socket6.close();
+#endif
 	error_code ec;
 	m_broadcast_timer.cancel(ec);
 	m_disabled = true;
+#if TORRENT_USE_IPV6
+	m_disabled6 = true;
+#endif
 	m_callback.clear();
 }
 
