@@ -1,3 +1,4 @@
+	* support IPv6 multicast in local service discovery
 	* simplify CAS function in DHT put
 	* support IPv6 traffic class (via the TOS setting)
 	* made uTP re-enter slow-start after time-out
